Source/WebKitLegacy/win/WebDownloadCurl.cpp
@@ -43,6 +43,8 @@
 #include <sys/types.h>
 
 #include <WebCore/BString.h>
+#include <WebCore/CurlDownload.h>
+#include <WebCore/FileSystem.h>
 #include <WebCore/NotImplemented.h>
 #include <WebCore/ResourceError.h>
 #include <WebCore/ResourceHandle.h>
@@ -64,7 +66,7 @@ void WebDownload::init(ResourceHandle* handle, const ResourceRequest& request, c
     m_delegate = delegate;
 
     m_download = adoptRef(new CurlDownload());
-    m_download->init(this, handle, request, response);
+    m_download->init(*this, handle, request, response);
 }
 
 void WebDownload::init(const URL& url, IWebDownloadDelegate* delegate)
@@ -72,7 +74,7 @@ void WebDownload::init(const URL& url, IWebDownloadDelegate* delegate)
     m_delegate = delegate;
 
     m_download = adoptRef(new CurlDownload());
-    m_download->init(this, url);
+    m_download->init(*this, url);
 }
 
 // IWebDownload -------------------------------------------------------------------
@@ -204,12 +206,11 @@ HRESULT WebDownload::useCredential(
    return E_FAIL;
 }
 
-void WebDownload::didReceiveResponse()
+void WebDownload::didReceiveResponse(const ResourceResponse& response)
 {
     COMPtr<WebDownload> protect = this;
 
     if (m_delegate) {
-        ResourceResponse response = m_download->getResponse();
         COMPtr<WebURLResponse> webResponse(AdoptCOM, WebURLResponse::createInstance(response));
         m_delegate->didReceiveResponse(this, webResponse.get());
 
